<resources>
    <string name="app_name">Wallpaper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="ringtones">Ringtones</string>
    <string name="samsung">Samsung</string>
    <string name="ios">iOS</string>
    <string name="hd">HD</string>
    <string name="iphone">iPhone</string>
    <string name="write_your_feedback_here">Write your feedback here</string>
    <string name="toggle_theme">toggle_theme</string>
    <string name="wallpaper_title">Explore stunning iPhone \nWallpapers in one place </string>
    <string name="wallpaper_description">Discover an exclusive collection of high-quality wallpaper to make your phone screen stand out</string>
    <string name="ringtones_title">Unique Phone Ringtones</string>
    <string name="ringtones_description">Refresh your ringtone collection with our handpicked selection of unique sounds</string>
    <string name="hd_wallpaper_title">HD Wallpaper For Every Style</string>
    <string name="hd_wallpaper_description">Explore stunning HD wallpaper for every style, from nature to abstract art. Find the perfect match for your phone!</string>
    <string name="exclusive_content_title">Exclusive Content</string>
    <string name="exclusive_content_description">Get access to premium wallpapers tones.</string>
    <string name="wallpaperTitle">Wallpaper</string>
    <string name="camera">Camera</string>
    <string name="call">Call</string>
    <string name="preview_image">Preview Image</string>
    <string name="WallpaperTitle">Wallpaper</string>
    <string name="previewImage">Preview Image</string>
    <string name="callTitle">Call</string>
    <string name="Title">Camera</string>
    <string name="browserTitle">Browser</string>
    <string name="youtube">YouTube</string>
    <string name="make_wallpaper">Make Wallpaper</string>
    <string name="Ringtones">Ringtones</string>
    <string name="settings">Settings</string>
    <string name="premium">Premium</string>
    <string name="buy_premium_version">Buy Premium Version</string>
    <string name="wallpaper_settings">Wallpaper Settings</string>
    <string name="restore_to_system_wallpaper">Restore to system wallpaper</string>
    <string name="general">General</string>
    <string name="share_app_with_friends_and_family">Share app with friends and family</string>
    <string name="rate_application">Rate Application</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="back">Back</string>
    <string name="dashboard">Dashboard</string>
    <string name="setting">Settings</string>
    <string name="iphone_button">iPhone</string>
    <string name="hd_button">HD</string>
    <string name="ios_button">iOS</string>
    <string name="samsung_button">Samsung</string>
    <string name="Back">back</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="_00_00">00:00</string>
    <string name="set_as">Set As</string>
    <string name="ringtone_icon">Ringtone Icon</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="notification">Notification</string>
    <string name="alarm_icon">Alarm Icon</string>
    <string name="alarm">Alarm</string>
    <string name="phone_wallpaper">Phone wallpaper</string>
    <string name="_0">0%</string>
    <string name="iphone_wallpaper">iPhone Wallpaper</string>
    <string name="image">Image</string>
    <string name="fit">fit</string>
    <string name="lock">lock</string>
    <string name="home">home</string>
    <string name="img">img</string>
    <string name="Next">Next</string>
    <string name="LanguageApplySuccessfully"> LanguageApplySuccessfully</string>
    <string name="skip">Skip</string>
    <string name="_vieew">image</string>
    <string name="imgview">imgview</string>
    <string name="unique_phone_ringtones">Unique Phone Ringtones</string>
    <string name="refresh_your_ringtone">Refresh your ringtone</string>
    <string name="media_title">Media Title</string>
    <string name="size_0_mb">Size: 0 MB</string>
    <string name="_00_0">00:00</string>
    <string name="iphone_Wallpaper">iPhone Wallpaper</string>
    <string name="more_catagories">More Catagories</string>
    <string name="IOS">IOS</string>
    <string name="explore_new_ringtones_n_in_one_place">Explore new ringtones in one place</string>
    <string name="image_title">image_title</string>
    <string name="wallpaper_name">wallpaper_name</string>
    <string name="splash_image">splash_image</string>
    <string name="explore_stunning_iphone_wallpaper_to_n_personalize_your_screen_effortlessly">Explore stunning iPhone wallpaper to\n personalize your screen effortlessly</string>
    <string name="HdWallpapers">HDWallpapers\n</string>
    <string name="Discoverhighqualitywallpapersforastunningscreenexperience">Discover high-quality wallpapers \nfor a stunning screen experience</string>
    <string name="iPhonrRindtones">iPhone Ringtones</string>
    <string name="EnjoythebestiPhoneringtonesforapremiumsoundexperience">Enjoy the best iPhone ringtones \nfor a premium sound experience</string>
    <string name="iosscreen">iosScreen</string>
    <string name="HD">HD</string>
    <string name="Samsung">Samsung</string>
    <string name="hdscreen">hdscreen</string>
    <string name="samsungscreen">samsungscreen</string>
    <string name="get_started">Get Started</string>
    <string name="apply">Apply</string>
    <string name="upgrade_to_premium">Upgrade to premium</string>
    <string name="enjoy_without_ads">enjoy without ads</string>
    <string name="premium_image">premium_image</string>
    <string name="get">Get</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="battery">Battery</string>
    <string name="message">Message</string>
    <string name="calculator">Calculator</string>
    <string name="gallery">Gallery</string>
    <string name="facebook">Facebook</string>
    <string name="netfilx">netfilx</string>
    <string name="netflix">Netflix</string>
    <string name="Netflix">Netflix</string>
    <string name="Youtube">Youtube</string>
    <string name="gmail">Gmail</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="phone_screen">phone_screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">lock_screen</string>
    <string name="Lock_screen">Lock Screen</string>
    <string name="both">both</string>
    <string name="both_screen">Both</string>
    <string name="close">Close</string>
    <string name="success_icon">Success Icon</string>
    <string name="wallpaper_set_successfully">Wallpaper set successfully!</string>
    <string name="language">Language</string>
    <string name="language_icon">Language Icon</string>
    <string name="english">English</string>
    <string name="languages">Languages</string>
    <string name="screen2">screen2</string>
    <string name="ringtones_screen">ringtones_screen</string>
    <string name="music">music</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="about_us">About us</string>
    <string name="Wallpaper">wallpaper</string>
    <string name="sam">sam</string>
    <string name="hd_">hd</string>
    <string name="start">Start</string>
    <string name="download">Download</string>
    <string name="set_sound_success">"%1$s set successfully!"</string>
    <string name="check_your_internet_connection">Check Your internet Connection</string>
    <string name="open_internet_setting">Open setting</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_to_exit">Are you sure to exit?</string>
    <string name="ok">OK</string>
    <string name="no_internet">No Internet</string>
    <string name="no">No</string>
    <string name="iphone16_label">iPhone 16</string>
    <string name="iphone15_label">iPhone 15</string>
    <string name="iphone14_label">iPhone 14</string>
    <string name="iphone13_label">iPhone 13</string>
    <string name="iphone12_label">iPhone 12</string>
    <string name="iphone11_label">iPhone 11</string>
    <string name="car_label">Car</string>
    <string name="animal_label">Animal</string>
    <string name="nature_label">Nature</string>
    <string name="aesthetics_label">Aesthetics</string>
    <string name="city_label">City</string>
    <string name="abstract_label">Abstract</string>
    <string name="ios18_label">iOS 18</string>
    <string name="ios17_label">iOS 17</string>
    <string name="ios16_label">iOS 16</string>
    <string name="ios15_label">iOS 15</string>
    <string name="ios14_label">iOS 14</string>
    <string name="ios13_label">iOS 13</string>
    <string name="s25_label">S25</string>
    <string name="s24_label">S24</string>
    <string name="s23_label">S23</string>
    <string name="s22_label">S22</string>
    <string name="s21_label">S21</string>
    <string name="s20_label">S20</string>
    <string name="yes">Yes</string>
    <string name="internet_connection_required_to_load_wallpapers_make_sure_you_have_proper_internet">Internet connection required to load wallpapers.Make sure you have proper Internet</string>
    <string name="cancel">Cancel</string>
    <string name="Exit">Exit</string>
</resources>