<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogbox_layout"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_wallpaper"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/outfit"
        android:layout_gravity="center"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnHomeScreen"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/phone_screen"
                android:scaleType="centerInside"
                android:src="@drawable/phone_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_screen"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/outfit"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnLockScreen"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/lock_screen"
                android:scaleType="centerInside"
                android:src="@drawable/lock_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lock_screen"
                android:textColor="@color/white"
                android:fontFamily="@font/outfit"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnBothScreens"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/both"
                android:scaleType="centerInside"
                android:src="@drawable/gallery_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both_screen"
                android:textColor="@color/white"
                android:fontFamily="@font/outfit"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

